cleaning and small bug fixes